# workflow-linter

./: .gitignore  .tool-versions  Pipfile  README.md  RULE_ROLLOUT.md  Taskfile.yml  actionlint_version.json  default_actions.json  package-lock.json  package.json  pylintrc  pyproject.toml  pyproject.toml.tpl  settings.yaml  zizmor.yml
.claude/: CLAUDE.md
.github/: CODEOWNERS  actionlint.yml  copilot-instructions.md  renovate.json
.github/workflows/: _bwwl-operations.yml  _bwwl_operations.yml  _version_type.yml  actionlint_windows.yml  add-actions.yml  bwwl_operations.yml  cd.yml  ci.yml  enforce-labels.yml  lint-examples.yml  scan.yml  test_bwwl_operations.yml  update_actions.yml  workflow-linter.yml
.github/workflows/examples/: ci.yaml  example.yaml  pull_request_target.yml  scan.yaml
.github/workflows/examples/example-references/: _build.yml  _docker.yml  _test.yml  _version.yml
src/bitwarden_workflow_linter/: __about__.py  actionlint_version.yaml  actions.py  cli.py  default_actions.json  default_settings.yaml  lint.py  load.py  rule.py  utils.py  zizmor_version.yaml
src/bitwarden_workflow_linter/models/: job.py  step.py  workflow.py
src/bitwarden_workflow_linter/rules/: check_blocked_domains.py  check_pr_target.py  job_environment_prefix.py  name_capitalized.py  name_exists.py  permissions_exist.py  pinned_job_runner.py  run_actionlint.py  run_zizmor.py  step_approved.py  step_pinned.py  underscore_outputs.py
tests/: test_actions.py  test_job.py  test_lint.py  test_step.py  test_workflow.py
tests/fixtures/: test-blocked-domains.yml  test-outputs-incorrect.yml  test.yml  test_outputs.yml  test_workflow.yaml  test_workflow_incorrect.yaml
tests/rules/: test_check_blocked_domains.py  test_check_pr_target.py  test_name_capitalized.py  test_permissions_exist.py  test_run_actionlint.py  test_run_zizmor.py  test_step_approved.py  test_step_pinned.py  test_underscore_output.py
