[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitwarden_workflow_linter"
dynamic = ["version"]
authors = []
description = "Custom GitHub Action Workflow Linter"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
	"annotated-types==0.7.0",
	"dataclasses-json==0.6.6",
	"marshmallow==3.21.2",
	"mypy-extensions==1.0.0",
	"packaging==24.0",
	"pydantic==2.8.1",
	"pydantic-core==2.20.1",
	"pyyaml==6.0.1",
	"ruamel.yaml==0.18.6",
	"ruamel.yaml.clib==0.2.12",
	"typing-extensions==4.12.2",
	"typing-inspect==0.9.0",
	"urllib3==2.2.1",
]

[project.urls]
Homepage = "https://github.com/bitwarden/workflow-linter"
Issues = "https://github.com/bitwarden/workflow-linter/issues"

[project.scripts]
bwwl = "bitwarden_workflow_linter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bitwarden_workflow_linter"]

[tool.hatch.version]
path = "src/bitwarden_workflow_linter/__about__.py"
